Adding sequential seeding of postgres and redis

--- a/src/booking-engine/conf/app.conf
+++ b/src/booking-engine/conf/app.conf
@@ -30,9 +30,9 @@ watch=true
 module.testrunner = github.com/revel/revel/modules/testrunner
 
 log.trace.output = off
-log.info.output  = stderr
-log.warn.output  = stderr
-log.error.output = stderr
+log.info.output  = %(app.name)s.log
+log.warn.output  = %(app.name)s.log
+log.error.output = %(app.name)s.log
 
 [prod]
 mode.dev=false
