Altering redis block

--- a/src/booking-engine/conf/app.conf
+++ b/src/booking-engine/conf/app.conf
@@ -29,10 +29,10 @@ watch=true
 
 module.testrunner = github.com/revel/revel/modules/testrunner
 
-log.trace.output = off
-log.info.output  = %(app.name)s.log
-log.warn.output  = %(app.name)s.log
-log.error.output = %(app.name)s.log
+log.trace.output = stdout
+log.info.output  = stdout
+log.warn.output  = stdout
+log.error.output = stdout
 
 [prod]
 mode.dev=false
@@ -41,7 +41,7 @@ watch=false
 
 module.testrunner =
 
-log.trace.output = off
-log.info.output  = off
-log.warn.output  = %(app.name)s.log
-log.error.output = %(app.name)s.log
+log.trace.output = stdout
+log.info.output  = stdout
+log.warn.output  = stdout
+log.error.output = stdout
