Redis server address configured

--- a/src/booking-engine/conf/app.conf
+++ b/src/booking-engine/conf/app.conf
@@ -20,6 +20,7 @@ log.error.prefix = "ERROR "
 i18n.default_language=en
 
 module.static=github.com/revel/revel/modules/static
+redis.server.address       = 127.0.0.1:6379
 
 [dev]
 mode.dev=true
@@ -32,6 +33,19 @@ log.trace.output = off
 log.info.output  = stdout
 log.warn.output  = stdout
 log.error.output = stdout
+
+[qa]
+mode.dev=true
+results.pretty=true
+watch=true
+
+module.testrunner = github.com/revel/revel/modules/testrunner
+
+log.trace.output = off
+log.info.output  = stdout
+log.warn.output  = stdout
+log.error.output = stdout
+redis.server.address   = 54.179.153.216:6379
 
 [prod]
 mode.dev=false
