--- a/src/booking-engine/conf/app.conf
+++ b/src/booking-engine/conf/app.conf
@@ -58,3 +58,4 @@ log.trace.output = off
 log.info.output  = stdout
 log.warn.output  = stdout
 log.error.output = stdout
+redis.server.address   = 54.179.153.216:6379
