--- a/src/booking-engine/conf/app.conf
+++ b/src/booking-engine/conf/app.conf
@@ -35,16 +35,16 @@ log.warn.output  = stdout
 log.error.output = stdout
 
 [qa]
-mode.dev=true
+mode.dev=false
 results.pretty=true
-watch=true
+watch=false
 
 module.testrunner = github.com/revel/revel/modules/testrunner
 
 log.trace.output = off
-log.info.output  = stdout
-log.warn.output  = stdout
-log.error.output = stdout
+log.info.output  = off
+log.warn.output  = %(app.name)s.log
+log.error.output = %(app.name)s.log
 redis.server.address   = 54.179.153.216:6379
 
 [prod]
