Configured psql details

--- a/src/booking-engine/conf/app.conf
+++ b/src/booking-engine/conf/app.conf
@@ -33,6 +33,9 @@ log.trace.output = off
 log.info.output  = stdout
 log.warn.output  = stdout
 log.error.output = stdout
+psql.user = arvindr
+psql.host = 127.0.0.1
+
 
 [qa]
 mode.dev=false
@@ -46,6 +49,8 @@ log.info.output  = off
 log.warn.output  = %(app.name)s.log
 log.error.output = %(app.name)s.log
 redis.server.address   = 54.179.153.216:6379
+psql.user = postgres
+psql.host = 54.179.153.216
 
 [prod]
 mode.dev=false
