--- a/src/booking-engine/conf/app.conf
+++ b/src/booking-engine/conf/app.conf
@@ -36,15 +36,14 @@ log.error.output = stdout
 psql.user = arvindr
 psql.host = 127.0.0.1
 
-
 [qa]
-mode.dev=false
+mode.dev=true
 results.pretty=true
 watch=false
 
 module.testrunner = github.com/revel/revel/modules/testrunner
 
-log.trace.output = off
+log.trace.output = stdout
 log.info.output  = off
 log.warn.output  = %(app.name)s.log
 log.error.output = %(app.name)s.log
@@ -64,3 +63,5 @@ log.info.output  = stdout
 log.warn.output  = stdout
 log.error.output = stdout
 redis.server.address   = 54.179.153.216:6379
+psql.user = postgres
+psql.host = 54.179.153.216
